--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -11,7 +11,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Build-a-thon 2022, Hoist the colors?"
+        "## Build-a-thon 2022, Hoist the colors?\n",
+        "v1.0 release on 24 Aug 2022\n",
+        "Metrics: 335 nodes, 595 relations"
       ]
     },
     {
@@ -28,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -37,7 +39,23 @@
         "id": "KD4Roac3nWHm",
         "outputId": "e2e442f1-e194-4afa-a5a1-348b5ce04a55"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/tmp/FGAN-Build-a-thon-2022/Banner/1920x1080-FG_AN-buildathon_Sep02-01.png'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32m/Users/vishnu/Desktop/TDs/1.Code.VSC/FGAN-Build-a-thon-2022/Notebooks2022/build_a_thon_graph_v1.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vishnu/Desktop/TDs/1.Code.VSC/FGAN-Build-a-thon-2022/Notebooks2022/build_a_thon_graph_v1.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m Image\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/vishnu/Desktop/TDs/1.Code.VSC/FGAN-Build-a-thon-2022/Notebooks2022/build_a_thon_graph_v1.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m Image(filename\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m/tmp/FGAN-Build-a-thon-2022/Banner/1920x1080-FG_AN-buildathon_Sep02-01.png\u001b[39;49m\u001b[39m'\u001b[39;49m, width\u001b[39m=\u001b[39;49m\u001b[39m500\u001b[39;49m)\n",
+            "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages/IPython/core/display.py:957\u001b[0m, in \u001b[0;36mImage.__init__\u001b[0;34m(self, data, url, filename, format, embed, width, height, retina, unconfined, metadata, alt)\u001b[0m\n\u001b[1;32m    955\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munconfined \u001b[39m=\u001b[39m unconfined\n\u001b[1;32m    956\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39malt \u001b[39m=\u001b[39m alt\n\u001b[0;32m--> 957\u001b[0m \u001b[39msuper\u001b[39;49m(Image, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(data\u001b[39m=\u001b[39;49mdata, url\u001b[39m=\u001b[39;49murl, filename\u001b[39m=\u001b[39;49mfilename,\n\u001b[1;32m    958\u001b[0m         metadata\u001b[39m=\u001b[39;49mmetadata)\n\u001b[1;32m    960\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwidth \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmetadata\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mwidth\u001b[39m\u001b[39m'\u001b[39m, {}):\n\u001b[1;32m    961\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwidth \u001b[39m=\u001b[39m metadata[\u001b[39m'\u001b[39m\u001b[39mwidth\u001b[39m\u001b[39m'\u001b[39m]\n",
+            "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages/IPython/core/display.py:327\u001b[0m, in \u001b[0;36mDisplayObject.__init__\u001b[0;34m(self, data, url, filename, metadata)\u001b[0m\n\u001b[1;32m    324\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmetadata \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    325\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmetadata \u001b[39m=\u001b[39m {}\n\u001b[0;32m--> 327\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreload()\n\u001b[1;32m    328\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_data()\n",
+            "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages/IPython/core/display.py:992\u001b[0m, in \u001b[0;36mImage.reload\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    990\u001b[0m \u001b[39m\"\"\"Reload the raw data from file or URL.\"\"\"\u001b[39;00m\n\u001b[1;32m    991\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39membed:\n\u001b[0;32m--> 992\u001b[0m     \u001b[39msuper\u001b[39;49m(Image,\u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49mreload()\n\u001b[1;32m    993\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mretina:\n\u001b[1;32m    994\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_retina_shape()\n",
+            "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages/IPython/core/display.py:353\u001b[0m, in \u001b[0;36mDisplayObject.reload\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    351\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfilename \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    352\u001b[0m     encoding \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_read_flags \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 353\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfilename, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_read_flags, encoding\u001b[39m=\u001b[39;49mencoding) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    354\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\n\u001b[1;32m    355\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39murl \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    356\u001b[0m     \u001b[39m# Deferred import\u001b[39;00m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/FGAN-Build-a-thon-2022/Banner/1920x1080-FG_AN-buildathon_Sep02-01.png'"
+          ]
+        }
+      ],
       "source": [
         "from IPython.display import Image\n",
         "Image(filename='/tmp/FGAN-Build-a-thon-2022/Banner/1920x1080-FG_AN-buildathon_Sep02-01.png', width=500) \n"
@@ -140,9 +158,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: python-dotenv in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages (0.20.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "%pip install python-dotenv\n",
@@ -152,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -177,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,7 +222,17 @@
         "id": "hKFE_mBLcWJL",
         "outputId": "a83f3001-1e21-42ff-e147-6bd048b33363"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: neo4j in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages (4.4.5)\n",
+            "Requirement already satisfied: pytz in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38b/lib/python3.8/site-packages (from neo4j) (2022.2.1)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install neo4j"
       ]
@@ -201,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
@@ -223,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -401,7 +448,7 @@
         "                    query=query, exception=exception))\n",
         "                raise\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for n.usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for n.usecases.\n",
         "    #Vishnu: 1 Aug 2022: Invariant: only 1 actor with 1 name.\n",
         "    #Vishnu: 22 Jun 2022: refactored, uses properties instead of labels\n",
         "    #Vishnu: 1 Jun 2022: created this f() to create nodes with usecase label\n",
@@ -431,7 +478,7 @@
         "                    #row has only 1 entry due to invariant. So break here. and exit f()\n",
         "                    break\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for usecases.\n",
         "    #Vishnu: 2 Jun 2022: created this f() to query nodes and return with usecase prop\n",
         "    @staticmethod\n",
         "    def _find_and_return_existing_node(tx, actor_name):\n",
@@ -450,7 +497,7 @@
         "                query=query, exception=exception))\n",
         "            raise\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for usecases.\n",
         "    @staticmethod\n",
         "    def _create_and_return_node(tx, actor_name, usecase_id):\n",
         "            query = (\n",
@@ -467,7 +514,7 @@
         "                    query=query, exception=exception))\n",
         "                raise\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for usecases.\n",
         "    #Vishnu: 1 Jun 2022: created this f() to add use case prop to existing nodes \n",
         "    #CAUTION: does not check for duplication, use create_node_with_prop instead.\n",
         "    def add_usecase_existing_node(self, actor_name, usecase_id):\n",
@@ -480,7 +527,7 @@
         "            for row in result:\n",
         "                print(\"added usecase to node: {n1}\".format(n1=row['n1']))\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for usecases.\n",
         "    @staticmethod\n",
         "    def _add_usecase_and_return_existing_node(tx, actor_name, usecase_id):\n",
         "        # To learn more about the Cypher syntax, see https://neo4j.com/docs/cypher-manual/current/\n",
@@ -502,7 +549,7 @@
         "                query=query, exception=exception))\n",
         "            raise\n",
         "\n",
-        "    #Vishnu: 1 Aug 2022: This approach uses properties instead of labels for usecases.\n",
+        "    #Vishnu: 1 Aug 2022: Deprecated: This approach uses properties instead of labels for usecases.\n",
         "    #CAUTION: Assumes that actors already exists with property as n.use case.\n",
         "    #So, this has to be called only in conjunction with create_node_with_usecase\n",
         "    #otherwise you may end up with actors not having use case prop\n",
@@ -750,16 +797,34 @@
         "            logging.error(\"{query} raised an error: \\n {exception}\".format(\n",
         "                query=query, exception=exception))\n",
         "            raise\n",
-        "\n",
+        "    \n",
+        "    #Vishnu: 29 Aug 2022\n",
+        "    #https://github.com/vrra/FGAN-Build-a-thon-2022/issues/52\n",
+        "    def del_node_in_db(self, node_name):\n",
+        "        with self.driver.session() as session:\n",
+        "            node_already_exists = session.read_transaction(\n",
+        "                self._find_and_return_existing_node_label, node_name)\n",
+        "            if not node_already_exists:\n",
+        "                print(f\"\\\"{node_name}\\\" does not exist! \")\n",
+        "            result = session.write_transaction(\n",
+        "                self._del_node_in_db, node_name)\n",
+        "            for row in result:\n",
+        "                    print(\"Deleted node: {n1}\".format(n1=row['name']))\n",
+        "            \n",
+        "    #Vishnu: 29 Aug 2022\n",
+        "    #https://github.com/vrra/FGAN-Build-a-thon-2022/issues/52\n",
         "    @staticmethod\n",
-        "    def _count_nodes_in_db(tx):\n",
+        "    def _del_node_in_db(tx, actor1_name):\n",
         "        query = (\n",
         "            \"MATCH (n) \"\n",
-        "            \"return count(n) as count\"\n",
+        "            \"WHERE (n.name = '\"+actor1_name+\"') \"\n",
+        "            \"with n, n.name as name \"\n",
+        "            \"detach delete n \"\n",
+        "            \"return name\"\n",
         "        )\n",
         "        result = tx.run(query)\n",
         "        try:\n",
-        "            return [{\"count\": row[\"count\"]} \n",
+        "            return [{\"name\": row[\"name\"]} \n",
         "                    for row in result]\n",
         "        # Capture any errors along with the query and data for traceability\n",
         "        except ServiceUnavailable as exception:\n",
@@ -780,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "6p2nMvmodNw4"
       },
@@ -813,6 +878,25 @@
       },
       "source": [
         "## Examples"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\"traffic offload controller\" does not exist! \n",
+            "\"supply chain management controller\" does not exist! \n"
+          ]
+        }
+      ],
+      "source": [
+        "app.del_node_in_db(\"traffic offload controller\")\n",
+        "app.del_node_in_db(\"supply chain management controller\")\n"
       ]
     },
     {
