updated on 15 may

--- a/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
+++ b/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
@@ -8,7 +8,7 @@
     "## Build-a-thon 2023\n",
     "Register here https://github.com/vrra/FGAN-Build-a-thon/issues/new/choose\n",
     "\n",
-    "Created: 14 Apr 2022.   \n",
+    "Created: 14 Apr 2023\n",
     "Author: Vishnu Ram OV.   \n",
     "vishnu.n@ieee.org.   \n",
     "Licence: available for all purposes under the sun  \n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "source": [
     "### Read the input file \n",
-    "NOTE- for this notebook we use a downloaded copy of https://www.itu.int/rec/T-REC-Y.Sup71-202207-I"
+    "NOTE- for this notebook we use a downloaded copy of https://www.itu.int/en/ITU-T/focusgroups/an/Documents/Use-case-AN.pdf"
    ]
   },
   {
