get rid of magik strings

--- a/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
+++ b/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
@@ -49,7 +49,10 @@
     "#api_key=\"your ADMIN_API_KEY\"\n",
     "#input_filename=\"your input file name\"\n",
     "#argilla_workspace=\"your argilla workspace\"\n",
-    "#vishnuramov_push_to_hf_hub_token=\"huggingface hub login token\""
+    "#my_push_to_hf_hub_token=\"huggingface hub login token\"\n",
+    "#argilla_dbname=\"argilla db name in hf space\"\n",
+    "#hf_hub_name=\"hf hub name for dataset\"\n",
+    "#hf_user=\"valid hf username where the dataset would be stored\""
    ]
   },
   {
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +103,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,29 +125,38 @@
     "key = os.getenv('api_key')\n",
     "my_input_filename = os.getenv('input_filename')\n",
     "my_argilla_workspace=os.getenv('argilla_workspace')\n",
-    "my_push_to_hf_hub_token=os.getenv('vishnuramov_push_to_hf_hub_token')"
+    "my_push_to_hf_hub_token=os.getenv('my_push_to_hf_hub_token')\n",
+    "my_argilla_dbname=os.getenv('argilla_dbname')\n",
+    "my_hf_hub_name=os.getenv('hf_hub_name')\n",
+    "my_hf_user=os.getenv('hf_user')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "admin\n"
+      "admin\n",
+      "fgandataset01\n",
+      "ITU-T-Build-a-thon\n",
+      "vishnuramov\n"
      ]
     }
    ],
    "source": [
-    "print(my_argilla_workspace)"
+    "print(my_argilla_workspace)\n",
+    "print(my_argilla_dbname)\n",
+    "print(my_hf_hub_name)\n",
+    "print(my_hf_user)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,18 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "settings = rg.TextClassificationSettings(label_schema=[\"Usecase\", \"Architecture\", \"PoC\", \"Other\"])\n",
-    "rg.configure_dataset(name=\"fgan23allpages\", settings=settings)\n",
+    "rg.configure_dataset(name=my_argilla_dbname, settings=settings)\n",
     "#Caution: the dataset name will not accept caps letters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +351,7 @@
        "2   \\nError! Reference source not found.  (2021 -...                 "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +398,7 @@
     "                    },\n",
     "                )\n",
     "    dataset_rg = rg.DatasetForTextClassification([record])\n",
-    "    rg.log(dataset_rg, \"fgan23allpages\")"
+    "    rg.log(dataset_rg, my_argilla_dbname)"
    ]
   },
   {
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -420,25 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Upload 1 LFS files: 100%|██████████| 1/1 [00:09<00:00,  9.81s/it]00:00<?, ?it/s]\n",
-      "Pushing dataset shards to the dataset hub: 100%|██████████| 1/1 [00:11<00:00, 11.37s/it]\n"
+      "Upload 1 LFS files: 100%|██████████| 1/1 [00:05<00:00,  5.67s/it]00:00<?, ?it/s]\n",
+      "Pushing dataset shards to the dataset hub: 100%|██████████| 1/1 [00:07<00:00,  7.92s/it]\n"
      ]
     }
    ],
    "source": [
     "from datasets import load_dataset\n",
-    "dataset_rg = rg.load(\"fgan23allpages\")\n",
+    "dataset_rg = rg.load(my_argilla_dbname)\n",
     "dataset_ds = dataset_rg.to_datasets()\n",
     "\n",
     "#push the dataset to the Hugging Face Hub\n",
-    "dataset_ds.push_to_hub(\"ITU-T-Build-a-thon-fgan23allpages\")"
+    "dataset_ds.push_to_hub(my_hf_hub_name)"
    ]
   },
   {
@@ -446,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE- Pages Dataset is available from vishnuramov/ITU-T-Build-a-thon-fgan23allpages"
+    "NOTE- Pages Dataset is available from \"hf_user\"/\"hf_hub_name\""
    ]
   },
   {
@@ -454,7 +466,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example for loading the dataset"
+    "### Example for loading the dataset\n",
+    "NOTE- Make sure you have the HF user name and hub name \n",
+    "where the dataset was loaded in the first place.  \n",
+    "CAUTION - this is test code, not to be executed always."
    ]
   },
   {
@@ -518,69 +533,21 @@
    ],
    "source": [
     "from datasets import load_dataset\n",
-    "dataset_ds = load_dataset(\"vishnuramov/ITU-T-Build-a-thon-fgan23allpages\", split=\"train\")\n",
+    "load_dataset_path=my_hf_user+'/'+my_hf_hub_name\n",
+    "print(load_dataset_path)\n",
+    "dataset_ds = load_dataset(load_dataset_path, split=\"train\")\n",
     "dataset_rg = rg.read_datasets(dataset_ds, task=\"TextClassification\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[?25l"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\n",
-       "\u001b[?25h"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">96</span> records logged to \n",
-       "<a href=\"https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgan23allpages_readback\" target=\"_blank\"><span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgan23allpages_readback</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;36m96\u001b[0m records logged to \n",
-       "\u001b]8;id=717713;https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgan23allpages_readback\u001b\\\u001b[4;94mhttps://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgan23allpages_readback\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BulkResponse(dataset='fgan23allpages_readback', processed=96, failed=0)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rg.log(dataset_rg, \"fgan23allpages_readback\")\n"
+    "#the dataset is hardcoded because this is just a test code.\n",
+    "rg.log(dataset_rg, \"fgandataset_test_readback\")\n",
+    "#Now you can go to the HF space and check if you got it."
    ]
   }
  ],
