Changed the workflow name

--- a/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
+++ b/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
@@ -541,9 +541,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[?25l"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/rich/live.py:229: UserWarning: \n",
+       "install \"ipywidgets\" for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "/opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/rich/live.py:229: UserWarning: \n",
+       "install \"ipywidgets\" for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "\u001b[?25h"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">96</span> records logged to \n",
+       "<a href=\"https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\" target=\"_blank\"><span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m96\u001b[0m records logged to \n",
+       "\u001b]8;id=392543;https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b\\\u001b[4;94mhttps://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BulkResponse(dataset='fgandataset_test_readback', processed=96, failed=0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#the dataset is hardcoded because this is just a test code.\n",
     "rg.log(dataset_rg, \"fgandataset_test_readback\")\n",
